--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -85,6 +85,10 @@
     <Compile Include="CodeTreeLuaVisitor\BaseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BlockVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Elements\InterfaceState.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\AssignmentExpressionVisitorBase.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\DivideAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\ModuloAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\MultiplyAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\BaseExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\BinaryExpressionAsMethodCallVisitorBase.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\BitwiseAndExpressionVisitor.cs" />
@@ -114,7 +118,7 @@
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\NotEqualsExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Member\ConstructorDeclarationVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\EqualsValueClauseVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\AddAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\AddAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\AddExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ArrayCreationExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ArrayInitializerExpressionVisitor.cs" />
@@ -141,7 +145,7 @@
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\SimpleAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Lambda\SimpleLambdaExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Literal\StringLiteralExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\SubtractAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\SubtractAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\SubtractExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ThisExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Literal\TrueLiteralExpressionVisitor.cs" />
