--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -85,10 +85,15 @@
     <Compile Include="CodeTreeLuaVisitor\BaseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BlockVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Elements\InterfaceState.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\AndAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\AssignmentExpressionVisitorBase.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\DivideAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\ExclusiveOrAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\LeftShiftAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\ModuloAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\MultiplyAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\OrAssignmentExpressionVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Expression\Assignment\RightShiftAssignmentExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\BaseExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\BinaryExpressionAsMethodCallVisitorBase.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\BitwiseAndExpressionVisitor.cs" />
