--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -76,6 +76,8 @@
     <Compile Include="General\ClassWithEquals.cs" />
     <Compile Include="General\ClassWithIndexer.cs" />
     <Compile Include="General\ClassWithProperty.cs" />
+    <Compile Include="Interfaces\ClassWithMethod.cs" />
+    <Compile Include="Interfaces\InterfaceWithMethod.cs" />
     <Compile Include="Statements\ClassWithSwitch.cs" />
     <Compile Include="General\ClassWithTypeAndVariableNaming.cs" />
     <Compile Include="General\GeneralTests.cs" />
