Updated gitignore to ignore build output for tests.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@
 /CsLuaProjects/MyAddOn.CsLuaTrigger/bin/Debug
 /CsLuaProjects/MyAddOn.CsLuaTrigger/obj/Debug
 /CsLuaConverter/TestResults
+/CsLuaConverter/CsLuaConverterTests/bin/Debug
+/CsLuaConverter/CsLuaConverterTests/obj/Debug
