Fixed tests in grindOMeter for usage of Lua.Function in menu tables. Implemented more linq methods.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -285,6 +285,7 @@
     <None Include="Lua\Meta\Throw.lua" />
     <None Include="Lua\Meta\Try.lua" />
     <None Include="Lua\Meta\aa._M.lua" />
+    <None Include="Lua\System\InvalidOperationException.lua" />
     <None Include="Lua\System\NotImplementedException.lua" />
     <None Include="Lua\System\Collections\aa.lua" />
     <None Include="Lua\System\Collections\Generic\aa.lua" />
