--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -82,6 +82,7 @@
     <Compile Include="General\ClassWithEquals.cs" />
     <Compile Include="General\ClassWithIndexer.cs" />
     <Compile Include="General\ClassWithProperty.cs" />
+    <Compile Include="Generics\ClassUsingGenericsInMethods.cs" />
     <Compile Include="Interfaces\ClassWithMethod.cs" />
     <Compile Include="Interfaces\InterfaceWithMethod.cs" />
     <Compile Include="Statements\ClassWithSwitch.cs" />
