--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -84,6 +84,7 @@
     <Compile Include="CodeTreeLuaVisitor\Attribute\AttributeVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BaseVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\BlockVisitor.cs" />
+    <Compile Include="CodeTreeLuaVisitor\Constraint\ClassConstraintVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Constraint\ConstructorConstraintVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Constraint\IConstraint.cs" />
     <Compile Include="CodeTreeLuaVisitor\Constraint\TypeConstraintVisitor.cs" />
