Fixed an issue in member picking where base classes would not pick the correct level member.

--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -83,6 +83,9 @@
     <Compile Include="General\ClassWithIndexer.cs" />
     <Compile Include="General\ClassWithProperty.cs" />
     <Compile Include="Generics\ClassUsingGenericsInMethods.cs" />
+    <Compile Include="Inheritance\Base.cs" />
+    <Compile Include="Inheritance\InheritanceTests.cs" />
+    <Compile Include="Inheritance\Inheriter.cs" />
     <Compile Include="Interfaces\ClassWithMethod.cs" />
     <Compile Include="Interfaces\InterfaceWithMethod.cs" />
     <Compile Include="Namespaces\Class1.cs" />
