--- a/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
+++ b/CsLuaProjects/CsLuaTest/CsLuaTest.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Arrays\ClassWithArrays.cs" />
     <Compile Include="Collections\CollectionsTests.cs" />
     <Compile Include="Constructors\Class1.cs" />
+    <Compile Include="Constructors\Class2.cs" />
+    <Compile Include="Constructors\Class3.cs" />
     <Compile Include="Constructors\ConstructorsTests.cs" />
     <Compile Include="Expressions\ExpressionsTests.cs" />
     <Compile Include="General\ACommonName.cs" />
