--- a/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
+++ b/CsLuaConverter/CsLuaFramework/CsLuaFramework.csproj
@@ -56,6 +56,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Serializer.cs" />
+    <Compile Include="TypeExtensions.cs" />
     <Compile Include="Wrapping\IMultipleValues.cs" />
     <Compile Include="Wrapping\IWrapper.cs" />
     <Compile Include="Wrapping\Wrapper.cs" />
