--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -282,6 +282,7 @@
   <ItemGroup>
     <None Include="CopyLuaToOutput.ps1" />
     <None Include="Lua\Meta\Add.lua" />
+    <None Include="Lua\Meta\AddToNamespace.lua" />
     <None Include="Lua\Meta\ArgumentMatching.lua" />
     <None Include="Lua\Meta\ConditionalAccess.lua" />
     <None Include="Lua\Meta\DefaultValue.lua" />
