Progress on generating system implementation.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@
 /CsLuaProjects/CsImplementation/SystemTests/obj/Debug
 /CsLuaProjects/CsImplementation/SystemZZZ/bin/Debug
 /CsLuaProjects/CsImplementation/SystemZZZ/obj/Debug
+/CsLuaProjects/CsImplementation/Out/CsImplementationAddon
