--- a/CsLuaProjects/CsImplementation/SystemZZZ/SystemZZZ.csproj
+++ b/CsLuaProjects/CsImplementation/SystemZZZ/SystemZZZ.csproj
@@ -46,14 +46,18 @@
     <Compile Include="ArgumentException.cs" />
     <Compile Include="ArgumentNullException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="String.cs" />
     <Compile Include="SystemException.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="AfterBuild.ps1" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
-  </Target>
+  </Target>-->
   <Target Name="AfterBuild">
+    <Exec Command="powershell.exe .\AfterBuild.ps1 $(SolutionDir)" />
   </Target>
-  -->
 </Project>
