--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -331,6 +331,8 @@
     <None Include="Lua\System\Linq.lua" />
     <None Include="Lua\System\String.lua" />
     <None Include="Lua\System\Object.lua" />
+    <None Include="Lua\System\SystemImplementation.lua" />
+    <None Include="Lua\System\SystemImplementation.types" />
     <None Include="Lua\System\Type.lua" />
     <None Include="Lua\System\aa.System.lua" />
   </ItemGroup>
