Progress on rewriting based on unit test.

--- a/CsLuaConverter/CsLuaConverterTests/CsLuaConverterTests.csproj
+++ b/CsLuaConverter/CsLuaConverterTests/CsLuaConverterTests.csproj
@@ -65,6 +65,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CodeGenerationUtil.cs" />
+    <Compile Include="ComparingTextWriter.cs" />
+    <Compile Include="EmptyProviders.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CsLuaTestConversionTests.cs" />
     <Compile Include="CoverageTests.cs" />
