--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@
 /CsLuaProjects/CsImplementation/Out/CsImplementationAddon
 /CsLuaProjects/CsImplementation/TypeListGenerator/bin/Debug
 /CsLuaProjects/CsImplementation/TypeListGenerator/obj/Debug
+/CsLuaConverter/packages
