--- a/CsLuaProjects/CsImplementation/SystemTests/SystemTests.csproj
+++ b/CsLuaProjects/CsImplementation/SystemTests/SystemTests.csproj
@@ -59,6 +59,9 @@
       <Name>SystemZZZ</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Collections\Generic\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
