--- a/CsLuaProjects/CsImplementation/SystemZZZ/SystemZZZ.csproj
+++ b/CsLuaProjects/CsImplementation/SystemZZZ/SystemZZZ.csproj
@@ -45,13 +45,21 @@
   <ItemGroup>
     <Compile Include="ArgumentException.cs" />
     <Compile Include="ArgumentNullException.cs" />
+    <Compile Include="Collections\Generic\IEnumerable.cs" />
+    <Compile Include="Collections\Generic\IEnumerator.cs" />
+    <Compile Include="Collections\IEnumerable.cs" />
+    <Compile Include="Collections\IEnumerator.cs" />
     <Compile Include="Environment.cs" />
+    <Compile Include="IDisposable.cs" />
+    <Compile Include="Linq\Enumerable.cs" />
+    <Compile Include="Linq\Error.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="AfterBuild.ps1" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
