--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@
 /CsLuaProjects/CsLuaTest/obj/Release
 /CsLuaProjects/CsLuaTestRunner/bin/Release
 /CsLuaProjects/CsLuaTestRunner/obj/Release
+/CsLuaConverter/CsLuaFramework/bin/Release
+/CsLuaConverter/Lua/bin/Release
