--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -145,7 +145,6 @@
     <Compile Include="CodeTreeLuaVisitor\Expression\Binary\RightShiftExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ConditionalAccessExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ConditionalExpressionVisitor.cs" />
-    <Compile Include="CodeTreeLuaVisitor\Expression\Lambda\ILambdaVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\Lambda\SimpleLambdaExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\MemberBindingExpressionVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\Expression\ObjectInitializerExpressionVisitor.cs" />
@@ -265,8 +264,7 @@
     <Compile Include="MethodSignature\SignatureComposer.cs" />
     <Compile Include="MethodSignature\SignatureWriter.cs" />
     <Compile Include="Namespace.cs" />
-    <Compile Include="Providers\PartialElement\IPartialElementState.cs" />
-    <Compile Include="Providers\PartialElement\PartialElementState.cs" />
+    <Compile Include="Providers\PartialElementState.cs" />
     <Compile Include="CodeTreeLuaVisitor\UsingDirectiveVisitor.cs" />
     <Compile Include="CodeTreeLuaVisitor\VisitorException.cs" />
     <Compile Include="CodeTree\CodeTreeBranch.cs" />
@@ -279,32 +277,8 @@
     <Compile Include="ISyntaxAnalyser.cs" />
     <Compile Include="LuaFileWriter.cs" />
     <Compile Include="ProjectType.cs" />
-    <Compile Include="Providers\GenericsRegistry\GenericScope.cs" />
-    <Compile Include="Providers\GenericsRegistry\GenericsRegistry.cs" />
-    <Compile Include="Providers\GenericsRegistry\IGenericsRegistry.cs" />
     <Compile Include="Providers\IProviders.cs" />
-    <Compile Include="Providers\NameProvider\INameProvider.cs" />
-    <Compile Include="Providers\NameProvider\NameProvider.cs" />
-    <Compile Include="Providers\ProviderException.cs" />
     <Compile Include="Providers\Providers.cs" />
-    <Compile Include="Providers\TypeKnowledgeRegistry\IKnowledge.cs" />
-    <Compile Include="Providers\TypeKnowledgeRegistry\MethodKnowledge.cs" />
-    <Compile Include="Providers\TypeKnowledgeRegistry\TypeKnowledge.cs" />
-    <Compile Include="Providers\TypeProvider\ActionFuncTypes.cs" />
-    <Compile Include="Providers\TypeProvider\ExtensionMethod.cs" />
-    <Compile Include="Providers\TypeProvider\ITypeProvider.cs" />
-    <Compile Include="Providers\TypeProvider\ITypeResult.cs" />
-    <Compile Include="Providers\TypeProvider\LoadedNamespace.cs" />
-    <Compile Include="Providers\TypeProvider\LoadedType.cs" />
-    <Compile Include="Providers\TypeProvider\NativeTypeResult.cs" />
-    <Compile Include="Providers\TypeProvider\ScopeElement.cs" />
-    <Compile Include="Providers\TypeProvider\TypeCollections\AssemblyTypeCollection.cs" />
-    <Compile Include="Providers\TypeProvider\TypeCollections\BaseTypeCollection.cs" />
-    <Compile Include="Providers\TypeProvider\TypeCollections\ManuallyImplementedSystemTypeTypeCollection.cs" />
-    <Compile Include="Providers\TypeProvider\TypeCollections\SolutionTypeCollection.cs" />
-    <Compile Include="Providers\TypeProvider\TypeCollections\TypesFileTypeCollection.cs" />
-    <Compile Include="Providers\TypeProvider\TypeNameProvider.cs" />
-    <Compile Include="Providers\TypeProvider\TypeResult.cs" />
     <Compile Include="AddOnConstruction\ResourceFile.cs" />
     <Compile Include="ProjectAnalysis\ProjectAnalyser.cs" />
     <Compile Include="AddOnConstruction\ProjectInfo.cs" />
@@ -403,6 +377,7 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.1.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <ImportGroup Label="Targets">
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
