--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -289,7 +289,9 @@
     <Compile Include="CsLuaMetaReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="AddOnConstruction\TocBuilder.cs" />
+    <Compile Include="SyntaxExtensions\ExpressionExtensions.cs" />
     <Compile Include="SyntaxExtensions\Extensions.cs" />
+    <Compile Include="SyntaxExtensions\StatementExtensions.cs" />
     <Compile Include="SyntaxExtensions\TypeSwitch.cs" />
     <Compile Include="WrappingException.cs" />
   </ItemGroup>
