--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -292,6 +292,7 @@
     <Compile Include="SyntaxExtensions\ExpressionExtensions.cs" />
     <Compile Include="SyntaxExtensions\Extensions.cs" />
     <Compile Include="SyntaxExtensions\StatementExtensions.cs" />
+    <Compile Include="SyntaxExtensions\TypeExtensions.cs" />
     <Compile Include="SyntaxExtensions\TypeSwitch.cs" />
     <Compile Include="WrappingException.cs" />
   </ItemGroup>
