Identifier name syntax and object creation expression syntax support.

--- a/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
+++ b/CsLuaConverter/CsLuaConverter/CsLuaConverter.csproj
@@ -291,6 +291,7 @@
     <Compile Include="AddOnConstruction\TocBuilder.cs" />
     <Compile Include="SyntaxExtensions\ExpressionExtensions.cs" />
     <Compile Include="SyntaxExtensions\Extensions.cs" />
+    <Compile Include="SyntaxExtensions\NameExtensions.cs" />
     <Compile Include="SyntaxExtensions\StatementExtensions.cs" />
     <Compile Include="SyntaxExtensions\TypeExtensions.cs" />
     <Compile Include="SyntaxExtensions\TypeSwitch.cs" />
